Bug 1007975 - div with display:table exposes table semantics r=surkov

- Construct a table accessible object if a content in question is HTML <table>
- Drop checking whether a table accessible object is built by CSS display:table from HTMLTableAccessbile::IsProbablyLayoutTable

--HG--
extra : transplant_source : %15%A0%F3%22%8C%AB%AB%0E%CF%1D%A3H%E4%2Aj%CB8%BDy%F0